feat: Add social login (Kakao/Google/Apple), remove isFullTank, add isExistModel
- Implement Kakao login with access token direct flow
- Implement Google/Apple login with JWKS JWT verification (JwksTokenVerifier)
- Unify AuthLoginRequest to single credential field
- Remove isFullTank from fueling domain (entity, DTOs, service, repository, tests, schema)
- Simplify fuel efficiency calculation: always calculate from previous record mileage
- Add isExistModel field to bike registration
- Update CLAUDE.md and Swagger descriptions

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>